# Compression-Algo-Huffman

./: .gitignore  CMakeLists.txt  README.md  test_input.txt
include/: huffman.h
src/: huffman.cpp  main.cpp
tests/: CMakeLists.txt  test_huffman.cpp
